Adm > Login e Index adaptativo
No site Adm, a página login e index foram adaptadas para serem responsivas.

--- a/adm/css/login.css
+++ b/adm/css/login.css
@@ -1,3 +1,15 @@
 .cartao {
-  background-image: linear-gradient(to right, #111d48, #541a6f);
+	background-image: linear-gradient(to right, #111d48, #541a6f);
+}
+
+@media screen and (max-width: 576px){
+	.cartao {
+		border-radius: 0 !important;
+		box-shadow: none !important;
+	}
+
+	body {
+		overflow: hidden;
+		background-image: linear-gradient(to right, #111d48, #541a6f);
+	}
 }
