Loja > Login responsiva e header da index
No site da Loja, a página Login inteira e o header da index está responsiva.

--- a/loja/css/estilo.css
+++ b/loja/css/estilo.css
@@ -18,6 +18,26 @@
     overflow: hidden;
 }
 
-.cartao-login {
-    width: 60%;
+
+@media screen and (min-width: 1001px) {
+    
+    .cartao-login {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    
+    .cartao-login {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    
+    .cartao-login {
+        width: 100%;
+        min-height: 80vh;
+        margin-bottom: 2rem;
+    }
 }
